--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root{
+  min-height: 900px;
+  width: 460px;
+  background-color: #E5E5E5;
+  box-shadow: rgb(0 0 0 / 6%) 0px 4px 30px;
+  border-radius: 25px;
+  padding: 1.5rem 2.5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  min-height: 100vh;
+  background-color: rgb(184, 184, 187);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
